MODON MRE BPDEV/force-app/main/default/objects/Lead_Owner_Relationship__c/Lead_Owner_Relationship__c.object-meta.xml
<CustomObject>
    <label>Lead Owner Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Owner Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Owner Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>