MODON MRE BPDEV/force-app/main/default/objects/Lead_Owner_Relationship__c/fields/Joint_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owner_Name__c</fullName>
    <formula>JointOwnerLeadId__r.FirstName &amp; &apos; &apos; &amp; JointOwnerLeadId__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joint Owner Name</label>
    <type>Text</type>
</CustomField>