MODON MRE BPDEV/force-app/main/default/objects/Lead_Owner_Relationship__c/fields/JointOwnerLeadId__c.field-meta.xml
<CustomField>
    <fullName>JointOwnerLeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The joint buyer linked to this primary lead</description>
    <label>Joint Owner Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Owner Relationships (Joint Owner Lead)</relationshipLabel>
    <relationshipName>Lead_Owner_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>