MODON MRE BPDEV/force-app/main/default/objects/Lead_Owner_Relationship__c/fields/PrimaryLeadId__c.field-meta.xml
<CustomField>
    <fullName>PrimaryLeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Owner Relationships</relationshipLabel>
    <relationshipName>Lead_Owner_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>